# education

./: .gitignore  pyproject.toml
ab-tests/: 001-experiment.ipynb  03-central-limit-theorem.ipynb  05-small-samples.ipynb  05-z-test-vs-t-test.ipynb
archive/ab-tests/: 03-central-limit-theorem.ipynb  05-small-samples.ipynb  06-H0.ipynb  calculations.py
archive/genetic-algorithms/03-chapter-intro-deap/: 301-one-max.ipynb  baseline.py
archive/lessons/: a_little_biе_of_sql.sql  design_and_analysis_ab.ipynb  mathematics_in_ab_tests.ipynb  synthetic_aa_test.ipynb
archive/ml-balakirev/: README.md
archive/test_tasks/: aaa_01_rotate_matrix.py  aaa_04_photo_1.py  aaa_05_photo_2.py  aaa_06_photo_3.py  aaa_07.ipynb  aaa_08.ipynb  aaa_09.ipynb  aaa_10.ipynb  buckets_data.ipynb  lockobank_create_db.py  prosebya_research.ipynb  sql_windows.sql  test_tasks.sqlite  vk_create_data.ipynb  vk_intrview_01.sql
genetic-algorithms/: README.md
genetic-algorithms/03-chapter-intro-deap/: 301-one-max.ipynb  302-one-max-experiments.ipynb
interviews-tasks/: 250327-yandex-algorithms.py  250401-yandex-algorithms.py
leetcode/: 07-modulus.py  08-hashset.py  09-hashtable.py  10-two-pointers.py  11-binary-search-template.py  11-binary-search.py  leetcode.py
ml-balakirev/01-intro/: 01-linear-models.ipynb
ml-inside/101-python/: 1-seminar-python-students.ipynb  2-hometask-1-python-students.ipynb  3-hometask-2-classes-students.ipynb  mlinside-hometask-1-python-students.ipynb
ml-inside/data/: 900-test.csv
sql-windows/: 00-employees.sql  db.sqlite
web-scraping/: get-data-clear.ipynb
(+41 files in other folders)
